Rename groupId to gfccollective